Inspection-InspectionOutcomes table New files added - [InspectionOutcomeDao.java,InspectionDesignServiceImpl.java,InspectionOutcomeController.java,InspectionOutcome.java,InspectionOutcomeService.java,InspectionDesignService.java,InspectionDesign.java,InspectionOutcomeServiceImpl.java,InspectionDesignDao.java,InspectionDesignController.java] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,ProjectsService.java,Vendor.java,VendorService.java,ProjectsServiceImpl.java,MunicipalitiesController.java,Projects.java,UsersController.java,VendorController.java,UsersService.java,Users.java,servicedef.xml,Municipalities.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json] Removed files - [Inspections.java,InspectionsController.java,InspectionsServiceImpl.java,InspectionsService.java,InspectionsDao.java]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -57,13 +57,16 @@
     "table" : "GISRecords",
     "schema" : "cx2"
   }, {
-    "table" : "Inspections",
+    "table" : "InspectionDesign",
     "schema" : "cx2"
   }, {
     "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionOutcome",
     "schema" : "cx2"
   }, {
     "table" : "ManualFeeTypes",
