--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -158,6 +158,9 @@
   }, {
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
+  }, {
+    "table" : "InspectionSequence",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
