pushing for backup Files modified - [pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,14 +71,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "MCNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "MCNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -177,7 +169,7 @@
     "type" : "integer"
   } ]
 }, {
-  "name" : "PUDApplication",
+  "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -190,14 +182,6 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -218,6 +202,10 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
