InspectionOutcomeFee New files added - [InspectionOutcomeFee.java,InspectionOutcomeFeeController.java,InspectionOutcomeFeeService.java,InspectionOutcomeFeeServiceImpl.java,InspectionOutcomeFeeDao.java] Files modified - [cx2_published_dataModel.json,MasterFormsController.java,FormTypesServiceImpl.java,MunicipalitiesController.java,InspectionOutcomeServiceImpl.java,FormTypesController.java,FormTypes.java,FormTypesService.java,InspectionOutcome.java,InspectionOutcomeController.java,servicedef.xml,InspectionOutcomeService.java,Municipalities.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json,pages-config.json] Removed files - [OutcomeFeeDao.java,OutcomeFeeServiceImpl.java,OutcomeFee.java,OutcomeFeeService.java,OutcomeFeeController.java]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -93,9 +93,6 @@
     "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
-    "table" : "OutcomeFee",
-    "schema" : "cx2"
-  }, {
     "table" : "ProjectForms",
     "schema" : "cx2"
   }, {
@@ -163,6 +160,9 @@
     "schema" : "cx2"
   }, {
     "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionOutcomeFee",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
