ViewProject cleanup of all sorts. Preventing blank entries, sort order for variables and grids, adding field requirements, updating columns displayed, etcetc. Files modified - [MyProjects.html,ViewProject.variables.json,pages-config.json,ViewProject.html]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -8452,7 +8452,7 @@
     "liveSource" : "cx2",
     "ignoreCase" : true,
     "matchMode" : "start",
-    "orderBy" : "startAt asc",
+    "orderBy" : "createdAt asc,name asc",
     "propertiesMap" : {
       "columns" : [ {
         "fieldName" : "projects",
