--- a/src/main/webapp/pages/MunicipalityProjects/MunicipalityProjects.variables.json
+++ b/src/main/webapp/pages/MunicipalityProjects/MunicipalityProjects.variables.json
@@ -8,7 +8,7 @@
     "dataSet" : [ {
       "label" : "Home",
       "icon" : "glyphicon glyphicon-home",
-      "link" : "#/MunicipalityAdministration"
+      "link" : "#/MyMunicipality"
     }, {
       "label" : "Municipality Projects",
       "icon" : "wi wi-ellipsis-v",
@@ -1043,15 +1043,16 @@
         "scale" : 0
       }, {
         "fieldName" : "projectDescription",
-        "type" : "text",
-        "fullyQualifiedType" : "text",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
         "columnName" : "ProjectDescription",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 2147483647,
+        "length" : 1000,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
+        "defaultValue" : "",
         "scale" : 0
       }, {
         "fieldName" : "projectGoals",
