DB Changes- MasterInspections, InspectionGis New files added - [InspectionGisDao.java,InspectionGis.java,InspectionGisService.java,InspectionGisServiceImpl.java,InspectionGisController.java] Files modified - [MasterInspectionsServiceImpl.java,GisrecordsService.java,cx2_published_dataModel.json,InspectionOutcomeFee.java,VendorServiceImpl.java,MasterInspectionsService.java,ProjectsService.java,Vendor.java,VendorService.java,MasterInspectionsController.java,ProjectsServiceImpl.java,MasterInspections.java,Projects.java,VendorController.java,UsersController.java,MasterInspectionsDao.java,UsersService.java,GisrecordsServiceImpl.java,Users.java,GisrecordsController.java,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,InspectionDesign.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -69,7 +69,7 @@
     "table" : "InspectionOutcome",
     "schema" : "cx2"
   }, {
-    "table" : "MasterForms",
+    "table" : "InspectionOutcomeFee",
     "schema" : "cx2"
   }, {
     "table" : "InspectionSequence",
@@ -78,13 +78,16 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
-    "table" : "MasterInspections",
+    "table" : "MasterCases",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterForms",
     "schema" : "cx2"
   }, {
     "table" : "Municipalities",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
+    "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
     "table" : "MasterProjects",
@@ -162,7 +165,7 @@
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionOutcomeFee",
+    "table" : "InspectionGis",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
