--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -66,6 +66,9 @@
     "table" : "Holidays",
     "schema" : "cx2"
   }, {
+    "table" : "InspectionGis",
+    "schema" : "cx2"
+  }, {
     "table" : "InspectionOutcome",
     "schema" : "cx2"
   }, {
@@ -78,19 +81,19 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterForms",
-    "schema" : "cx2"
-  }, {
-    "table" : "Municipalities",
     "schema" : "cx2"
   }, {
     "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
+    "table" : "MasterCases",
+    "schema" : "cx2"
+  }, {
     "table" : "MasterProjects",
+    "schema" : "cx2"
+  }, {
+    "table" : "Municipalities",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroups",
@@ -99,16 +102,16 @@
     "table" : "ProjectForms",
     "schema" : "cx2"
   }, {
-    "table" : "ProjectGISRecords",
-    "schema" : "cx2"
-  }, {
     "table" : "Projects",
     "schema" : "cx2"
   }, {
-    "table" : "ProjectTasks",
+    "table" : "ProjectGISRecords",
     "schema" : "cx2"
   }, {
     "table" : "ProjectSharedWith",
+    "schema" : "cx2"
+  }, {
+    "table" : "ProjectTasks",
     "schema" : "cx2"
   }, {
     "table" : "Roles",
@@ -126,16 +129,16 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "States",
-    "schema" : "cx2"
-  }, {
-    "table" : "TestRichText",
-    "schema" : "cx2"
-  }, {
     "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "Vendor",
+    "schema" : "cx2"
+  }, {
+    "table" : "States",
+    "schema" : "cx2"
+  }, {
+    "table" : "TestRichText",
     "schema" : "cx2"
   }, {
     "table" : "UserPasswordResetTokens",
@@ -144,16 +147,16 @@
     "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
-    "table" : "VendorApprovals",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorLicenses",
-    "schema" : "cx2"
-  }, {
     "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorApprovals",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -165,7 +168,10 @@
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionGis",
+    "table" : "InspectionCategoryMapping",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionCategories",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
