--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -52,6 +52,13 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "EditInspection",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "InspectionDesignId",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "FindForm",
   "type" : "PAGE",
   "params" : [ ]
