Service updates Files modified - [VendorServiceImpl.java,QueryExecutionController.java,ProjectsService.java,MasterInspectionsController.java,Cx2QueryExecutorService_V1.java,ProjectsServiceImpl.java,MunicipalitiesController.java,db-connection-settings.json,Projects.java,Cx2QueryExecutorServiceImpl.java,UsersController.java,InspectionDesignController.java,cx2-queries.hbm.xml,Vendor.java,VendorService.java,MasterInspections.java,FormTypesController.java,InspectionOutcomeServiceImpl.java,VendorController.java,StandardUserMunicipalitesResponse.java,InspectionOutcomeController.java,UsersService.java,Users.java,GisrecordsController.java,Cx2QueryExecutorService.java,ProjectsController.java,UsersServiceImpl.java,InspectionDesign.java,Cx2QueryExecutorServiceImpl_V1.java,db-connection-settings.json]

--- a/services/fishers/designtime/db-connection-settings.json
+++ b/services/fishers/designtime/db-connection-settings.json
@@ -25,9 +25,9 @@
   "dataSourceType" : "WM_MANAGED_DATASOURCE",
   "jndiName" : "",
   "reloadInfo" : {
-    "reload" : true,
-    "reason" : "UPDATED_FAILED",
-    "message" : "Changes Pulled"
+    "reload" : false,
+    "reason" : null,
+    "message" : null
   },
   "readOnly" : false
 }
