- Passing data around for the Dashboard New files added - [selectMunicipality.css,selectMunicipality.js,selectMunicipality.html,selectMunicipality.variables.json] Files modified - [UserClosedForms.variables.json,pages-config.json,Main.html,UserOpenForms.variables.json,QueryExecutionController.java,cx2-queries.hbm.xml,MyProjects.variables.json,Cx2QueryExecutorService_V1.java,UserOpenForms.html,app.variables.json,Main.variables.json,Cx2QueryExecutorServiceImpl.java,MyProjects.html,Main.js,cx2_query.json,UserClosedForms.html,Cx2QueryExecutorService.java,app.js,Cx2QueryExecutorServiceImpl_V1.java] Removed files - [ProjectsForUsersAndSharedWithResponse.java,FormsForUsersAndSharedResponse.java]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -614,10 +614,18 @@
     "name" : "goToPage_MyProjects",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "MyProjects",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "MyProjects",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "municipalityId",
+      "value" : "bind:!!Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID ? Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID : null"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_NewForm" : {
@@ -691,10 +699,18 @@
     "name" : "goToPage_UserClosedForms",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "UserClosedForms",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "UserClosedForms",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "municipalityId",
+      "value" : "bind:!!Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID ? Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID : null"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_UserCreation" : {
@@ -713,10 +729,18 @@
     "name" : "goToPage_UserOpenForms",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "UserOpenForms",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "UserOpenForms",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "integer",
+      "target" : "municipalityId",
+      "value" : "bind:!!Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID ? Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID : null"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_UserStatistics" : {
@@ -1009,6 +1033,34 @@
     "pageName" : "SFNewResidentialStructure",
     "dataSet" : [ ],
     "pageTransitions" : "none"
+  },
+  "StandardUserMunicipalities" : {
+    "_id" : "wm-StandardUserMunicipalites-wm.ServiceVariable-1478775230336",
+    "name" : "StandardUserMunicipalities",
+    "owner" : "App",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "USER",
+      "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
+      "type" : "integer"
+    } ],
+    "type" : "com.civicxpress.cx2.models.query.StandardUserMunicipalitesResponse",
+    "service" : "cx2",
+    "operation" : "executeStandardUserMunicipalites",
+    "operationId" : "QueryExecutionController_executeStandardUserMunicipalites",
+    "operationType" : "get",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : true,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "onSuccess" : "StandardUserMunicipalitesonSuccess($event, $scope)",
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution"
   },
   "successfully" : {
     "_id" : "wm-successfully-wm.NotificationVariable-1481869693445",
