--- a/src/main/webapp/pages/MyProjects/MyProjects.variables.json
+++ b/src/main/webapp/pages/MyProjects/MyProjects.variables.json
@@ -1241,8 +1241,12 @@
       "target" : "sharedWithUser",
       "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
       "type" : "integer"
+    }, {
+      "target" : "municipalityId",
+      "value" : "bind:Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID",
+      "type" : "integer"
     } ],
-    "type" : "com.civicxpress.cx2.models.query.ProjectsForUsersAndSharedWithResponse",
+    "type" : "com.civicxpress.cx2.Projects",
     "service" : "cx2",
     "operation" : "executeProjectsForUsersAndSharedWith",
     "operationId" : "QueryExecutionController_executeProjectsForUsersAndSharedWith",
