--- a/profiles/testdeploy.properties
+++ b/profiles/testdeploy.properties
@@ -1,7 +1,14 @@
+app.proxy.enabled=false
+app.proxy.host=
+app.proxy.password=
+app.proxy.port=
+app.proxy.username=
 db.cx2.dataSourceType=WM_MANAGED_DATASOURCE
 db.cx2.hbm2ddl=none
 db.cx2.jndiName=
 db.cx2.maxPageSize=100
+db.cx2.maxPoolSize=4
+db.cx2.minPoolSize=2
 db.cx2.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
 db.cx2.schemaName=CX2
 db.cx2.url=jdbc:sqlserver://192.168.2.211:1433;databaseName=CX2_DEV
@@ -10,10 +17,12 @@ db.fishers.dataSourceType=WM_MANAGED_DATASOURCE
 db.fishers.hbm2ddl=none
 db.fishers.jndiName=
 db.fishers.maxPageSize=100
-db.fishers.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
-db.fishers.schemaName=CX2_FISHERS
-db.fishers.url=jdbc:sqlserver://192.168.2.211:1433;databaseName=CX2_FISHERS
-db.fishers.username=CX2
+db.fishers.maxPoolSize=4
+db.fishers.minPoolSize=2
+db.fishers.password=7b6a43524a13241f6578367d11046c70477c612a43
+db.fishers.schemaName=fishers
+db.fishers.url=jdbc:sqlserver://64.87.23.26:1433;databaseName=fishers
+db.fishers.username=fishers
 security.enabled=true
 security.general.rememberMe.enabled=true
 security.general.rememberMe.timeOut=1296000
