--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -133,7 +133,7 @@
       "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
       "type" : "integer"
     } ],
-    "type" : "com.wavemaker.commons.wrapper.IntegerWrapper",
+    "type" : "integer",
     "service" : "cx2",
     "operation" : "executeAddMemeberToProject",
     "operationId" : "QueryExecutionController_executeAddMemeberToProject",
@@ -144,6 +144,7 @@
     "maxResults" : 20,
     "designMaxResults" : 10,
     "onSuccess" : "Widgets.dialogAddMember.close();Variables.ProjectSharedWithData.listRecords()",
+    "onError" : "Variables.DuplicateMemberToProject.invoke()",
     "startUpdate" : false,
     "autoUpdate" : false,
     "inFlightBehavior" : "executeLast",
@@ -1388,6 +1389,34 @@
     }, {
       "target" : "duration",
       "value" : "2000",
+      "type" : "number"
+    }, {
+      "target" : "class",
+      "value" : "Error",
+      "type" : "string"
+    }, {
+      "target" : "toasterPosition",
+      "value" : "bottom right",
+      "type" : "string"
+    } ],
+    "operation" : "toast"
+  },
+  "DuplicateMemberToProject" : {
+    "_id" : "wm-DuplicateMemberToProject-wm.NotificationVariable-1488534656593",
+    "name" : "DuplicateMemberToProject",
+    "owner" : "Page",
+    "category" : "wm.NotificationVariable",
+    "dataBinding" : [ {
+      "target" : "content",
+      "value" : "inline",
+      "type" : "string"
+    }, {
+      "target" : "text",
+      "value" : "The selected user is already a project member",
+      "type" : "string"
+    }, {
+      "target" : "duration",
+      "value" : "5000",
       "type" : "number"
     }, {
       "target" : "class",
