created CXAdmin / ManageProjects page. Added tiles to CXAdmin dashboard for ManageProjects and Inspections New files added - [ManageProjects] Files modified - [pages-config.json,CXAdmin.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -466,6 +466,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ManageProjects" : {
+    "_id" : "wm-goToPage_ManageProjects-wm.NavigationVariable-1488559177055",
+    "name" : "goToPage_ManageProjects",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageProjects",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageRoles" : {
     "_id" : "wm-goToPage_ManageRoles-wm.NavigationVariable-1484344556601",
     "name" : "goToPage_ManageRoles",
