--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -121,6 +121,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageRoles",
   "type" : "PAGE",
   "params" : [ ]
