-Error in deleting Person from Project -View Project/Members- no SUCCESS toaster for add member Files modified - [ViewProject.js,NewForm.js,ViewProject.html,ViewProject.variables.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -143,7 +143,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Widgets.dialogAddMember.close();Variables.ProjectSharedWithData.listRecords()",
+    "onSuccess" : "Widgets.dialogAddMember.close();Variables.ProjectSharedWithData.listRecords();Variables.AddMemberSuccess.invoke()",
     "onError" : "Variables.DuplicateMemberToProject.invoke()",
     "startUpdate" : false,
     "autoUpdate" : false,
