New Table FormsToInspections for Tagging MasterForms and MasterInspections New files added - [FormsToInspectionsService.java,FormsToInspectionsController.java,FormsToInspections.java,FormsToInspectionsServiceImpl.java,FormsToInspectionsDao.java] Files modified - [MasterInspectionsServiceImpl.java,cx2_published_dataModel.json,VendorServiceImpl.java,ProjectsService.java,MasterInspectionsController.java,ProjectsServiceImpl.java,MasterFormsService.java,MunicipalitiesController.java,Projects.java,FormTypesService.java,UsersController.java,GisrecordsServiceImpl.java,MasterForms.java,Municipalities.java,MunicipalitiesServiceImpl.java,GisrecordsService.java,MasterFormsController.java,MasterInspectionsService.java,FormTypesServiceImpl.java,Vendor.java,VendorService.java,States.java,MasterInspections.java,FormTypesController.java,FormTypes.java,VendorController.java,StatesServiceImpl.java,UsersService.java,Users.java,StatesController.java,GisrecordsController.java,StatesService.java,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,MasterFormsServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -173,6 +173,9 @@
   }, {
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
+  }, {
+    "table" : "FormsToInspections",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
