- Updated the new form dialog to use Category as a filter, rather than a required choice. - Moved the new form dialog into a partial and added its availability to UserOpenForms, UserClosedForms, and CompanyForms New files added - [newFormDialog.css,newFormDialog.js,newFormDialog.html,newFormDialog.variables.json] Files modified - [EmployeesMunicipalitiesResponse.java,GetVendorApprovalListByMunicipalityResponse.java,GetFormsForMunicpalityResponse.java,Cx2QueryExecutorServiceImpl.java,GetRolesForMunicipalityResponse.java,cx2_query.json,UserSubscriptionsCountResponse.java,VendorsLinkedWithFormResponse.java,pages-config.json,FormController.java,cx2-queries.hbm.xml,FormsTaggedWithGisrecordsResponse.java,GetListofGroupNameResponse.java,CountOfInspectionDesignByMunicipalityResponse.java,CompanyFormsByVendorIdResponse.java,GetWriteAccessGroupMembersByFormGuidResponse.java,GetUserIdResponse.java,FormService.java,UserClosedForms.html,Cx2QueryExecutorServiceImpl_V1.java,GetFormTypesByCategoriesAndMunicipalitiesResponse.java,Main.html,FetchRolesForUserWithMunicipalityResponse.java,CompanyForms.html,GetOwnersForGisRecordsResponse.java,QueryExecutionController.java,NewForm.html,Cx2QueryExecutorService_V1.java,SubDivisonCountResponse.java,UserOpenForms.html,UserOpenForms.js,CheckingUserWithInVendorUsersResponse.java,MunicipalityCountResponse.java,Main.js,GetMunicipalityGroupIdIdsResponse.java,MunicipalityProjectsResponse.java,CompanyForms.js,GetListofUsersResponse.java,CountOfVendorUsersResponse.java,BannedDetailsResponse.java,SearchFormByVendorResponse.java,VerifyPasswordResetTokenResponse.java,ProjectFormsResponse.java,GetRolesForUserResponse.java,GetProjectGisrecordsResponse.java,VendorsCountForMunicipalitiesResponse.java,GetGis2formsByFormResponse.java,Cx2QueryExecutorService.java,UserClosedForms.js]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -263,6 +263,16 @@
   "type" : "LEFTNAV",
   "params" : [ ]
 }, {
+  "name" : "newFormDialog",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "municipalityId",
+    "type" : "integer"
+  }, {
+    "name" : "dialogName",
+    "type" : "string"
+  } ]
+}, {
   "name" : "rightnav",
   "type" : "RIGHTNAV",
   "params" : [ ]
