--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -392,6 +392,17 @@
     } ],
     "pageTransitions" : "none"
   },
+  "goToPage_InspectionsDevDataEntry" : {
+    "_id" : "wm-goToPage_InspectionsDevDataEntry-wm.NavigationVariable-1488866783864",
+    "name" : "goToPage_InspectionsDevDataEntry",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "InspectionsDevDataEntry",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Main" : {
     "_id" : "wm-wm.NavigationVariable1389180517517",
     "name" : "goToPage_Main",
