--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -83,6 +83,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "InspectionsDevDataEntry",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Login",
   "type" : "PAGE",
   "params" : [ ]
