MyCart Table New files added - [MyCartServiceImpl.java,MyCartDao.java,MyCartController.java,MyCart.java,MyCartService.java] Files modified - [FeesService.java,cx2_published_dataModel.json,UsersController.java,UsersService.java,Users.java,FeesServiceImpl.java,Fees.java,FeesController.java,UsersServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -176,6 +176,9 @@
   }, {
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
+  }, {
+    "table" : "MyCart",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
