CompanyProfile/VendorApplication- made State/Postal Code non-required (for outside US) and made Country editable, updated icons. UserCreation- updated text and element spacing, updated password error text color to match red link text selectCompany partial- made it hidden when user only has 1 company Files modified - [Main.html,CompanyProfile.html,selectCompany.html,VendorApplication.html,UserCreation.html,VendorApplication.variables.json,CompanyProfile.variables.json]

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -526,7 +526,7 @@
         "fullyQualifiedType" : "boolean",
         "columnName" : "Active",
         "isPrimaryKey" : false,
-        "notNull" : false,
+        "notNull" : true,
         "length" : 0,
         "precision" : 0,
         "generator" : "assigned",
