- Added UserService - Restored ability to upload new user images with UserService.saveUserPhoto New files added - [UserService.spring.xml,servicedef.xml,README.md,UserService.java,UserController.java] Files modified - [MyProfile.html,MyProfile.variables.json,project-services.xml,pom.xml,MyProfile.js]

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/UserService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/cx2/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -164,6 +171,7 @@
                                 <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
+                                <source>services/UserService/src</source>
                                 <source>services/cx2/src</source>
                                 <source>services/fishers/src</source>
                                 <source>services/securityService/src</source>
